[WIP] Use Bazel to build highlight.js
When including an already minified version of highlight.js,
it is difficult to add new versions or review changes.

So let's use Bazel to build highlight.min.js from node packages,
this way we can use yarn to manage the versions we include.

Change-Id: Ib972d5ce83b6da70a06e8dd60dca18a2b24a1a06

--- a/lib/highlightjs/BUILD
+++ b/lib/highlightjs/BUILD
@@ -1,3 +1,27 @@
-exports_files([
-    "highlight.min.js",
-])
+# build highlight.min.js from node modules
+
+load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
+
+package(
+    default_visibility = ["//visibility:public"],
+    licenses = ["notice"],
+)
+
+rollup_bundle(
+    name = "highlight.min",
+    srcs = [
+        "@ui_npm//highlight.js",
+        "@ui_npm//highlightjs-closure-templates",
+    ],
+    config_file = "rollup.config.js",
+    entry_point = "index.js",
+    format = "iife",
+    silent = True,
+    sourcemap = "hidden",
+    rollup_bin = "//tools/node_tools:rollup-bin",
+    deps = [
+        "@npm//@rollup/plugin-commonjs",
+        "@npm//@rollup/plugin-json",
+        "@npm//@rollup/plugin-node-resolve",
+    ],
+)
