Add syntax highlighting for structured text
IEC 61131 structured text / SCL is a programming language for PLCs
(programmable logic controllers of industrial automation systems).

Add syntax highlighting by adding the highlight.js extension package
highlightjs-structured-text.

Change-Id: I80ddc1c4b52a8887e1eb328e6741909b48330ca9

--- a/polygerrit-ui/app/package.json
+++ b/polygerrit-ui/app/package.json
@@ -39,6 +39,7 @@
     "immer": "^9.0.5",
     "highlight.js": "^10.7.2",
     "highlightjs-closure-templates": "https://github.com/tali/highlightjs-closure-templates",
+    "highlightjs-structured-text": "^1.4.2",
     "lit": "2.0.2",
     "page": "^1.11.6",
     "polymer-bridges": "file:../../polymer-bridges/",
