Enable error level for the AutoValueImmutableFields bug pattern in ErrorProne
AutoValue instances should be deeply immutable.

Fix the current issues so that the build continues to work.

Bug: Issue 15056
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I9cd835fb4130da71a8ada25422949049203dce9c

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -102,7 +102,7 @@ java_package_configuration(
         "-Xep:AsyncFunctionReturnsNull:ERROR",
         "-Xep:AutoValueConstructorOrderChecker:ERROR",
         "-Xep:AutoValueFinalMethods:ERROR",
-        # "-Xep:AutoValueImmutableFields:WARN",
+        "-Xep:AutoValueImmutableFields:ERROR",
         # "-Xep:AutoValueSubclassLeaked:WARN",
         "-Xep:BadAnnotationImplementation:ERROR",
         "-Xep:BadComparable:ERROR",
