Enable error level for the EqualsGetClass bug pattern in ErrorProne
The current code has some violations of this bug pattern that we ignore
because:

a) fixing the class would be an incompatible change and break API
   (Comment, AuditEvent)

b) fixing the class could potentially break things and would require a
   larger refactoring (index classes that are subclassed)

Two places were fixed:

1. BlameInfo: There is no subclassing, hence fixing it should be safe.

2. NotPredicate: There is no subclassing, hence fixing it should be
   safe. We make the class final to prevent any future subclassing.

Ignoring the violations for the existing code is not great, but at least
it allows us to enable this bug pattern so that new additional
violations will be prevented.

Bug: Issue 15062
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I74db5384c2a9867f46a26dc632f840f7d677b987

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -170,7 +170,7 @@ java_package_configuration(
         "-Xep:EmptyBlockTag:ERROR",
         "-Xep:EmptyCatch:ERROR",
         "-Xep:EmptySetMultibindingContributions:ERROR",
-        # "-Xep:EqualsGetClass:WARN",
+        "-Xep:EqualsGetClass:ERROR",
         "-Xep:EqualsHashCode:ERROR",
         "-Xep:EqualsIncompatibleType:ERROR",
         "-Xep:EqualsNaN:ERROR",
