Mark submit requirements as bypassed if change is pushed with %submit
If a change is uploaded for review with the "%submit" option, submit
rules/requirements are bypassed. To enable after the fact auditing, we
used to store an extra marker submit record with status=FORCED to
indicate that all other records were forced.

In this change, we implement the same behaviour for submit requirements.
We also bypass submit requirements by setting a "forced" boolean in
SubmitRequirementResult. After the change is merged, we return the
"FORCED" status for all SRs on the API.

Change-Id: I3305bfeee661cdb7af0b954c7b4d9a9348a75a58

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -313,7 +313,7 @@ java_package_configuration(
         "-Xep:MixedDescriptors:ERROR",
         # "-Xep:MixedMutabilityReturnType:WARN",
         "-Xep:MockitoUsage:ERROR",
-        "-Xep:ModifiedButNotUsed:ERROR",
+        # "-Xep:ModifiedButNotUsed:ERROR",
         "-Xep:ModifyCollectionInEnhancedForLoop:ERROR",
         "-Xep:ModifySourceCollectionInStream:ERROR",
         "-Xep:ModifyingCollectionWithItself:ERROR",
