--- a/.bazelrc
+++ b/.bazelrc
@@ -15,7 +15,7 @@ build --announce_rc
 
 # Workaround Bazel worker crash (remove after upgrading to 4.1.0)
 # https://github.com/bazelbuild/bazel/issues/13333
-build --experimental_worker_multiplex=false
+# build --experimental_worker_multiplex=false
 
 test --build_tests_only
 test --test_output=all
