Enable error level for the DefaultPackage bug pattern in ErrorProne
Ignore the current issues so that the build continues to work:

* The Main class is supposed to be in the default package.

* For the generated TestSuite classes we don't care in which package
  they are. Ideally they would be in the same package as the test
  classes, but my Bazel skills are not sufficient to tweak
  tools/bzl/junit.bzl to achieve this. If someone is passionate about
  this, they may fix this later.

Bug: Issue 15060
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I77a89e134ae8d7824d2186f215d6286b12d7ed30

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -151,7 +151,7 @@ java_package_configuration(
         "-Xep:DeadException:ERROR",
         "-Xep:DeadThread:ERROR",
         "-Xep:DefaultCharset:ERROR",
-        # "-Xep:DefaultPackage:WARN",
+        "-Xep:DefaultPackage:ERROR",
         "-Xep:DepAnn:ERROR",
         "-Xep:DeprecatedVariable:ERROR",
         "-Xep:DiscardedPostfixExpression:ERROR",
