Enable error level for the ProtectedMembersInFinalClass bug pattern
Fix the current issues so that the build continues to work.

Most of these protected members are not used outside of the class and
can just be private.

Bug: Issue 15075
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I35a7fc8ccd3e49187bc609c01dbc599d440ffd82

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -364,7 +364,7 @@ java_package_configuration(
         "-Xep:PreconditionsInvalidPlaceholder:ERROR",
         "-Xep:PrimitiveAtomicReference:ERROR",
         "-Xep:PrivateSecurityContractProtoAccess:ERROR",
-        # "-Xep:ProtectedMembersInFinalClass:WARN",
+        "-Xep:ProtectedMembersInFinalClass:ERROR",
         "-Xep:ProtoBuilderReturnValueIgnored:ERROR",
         "-Xep:ProtoDurationGetSecondsGetNano:ERROR",
         "-Xep:ProtoFieldNullComparison:ERROR",
