Enable error level for the NonCanonicalType bug pattern in ErrorProne
Fix types that are referred to by a non-canonical name, which may be
misleading.

Bug: Issue 15073
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: If85655b24e19a220a134253eae418aaa447e5a82

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -327,7 +327,7 @@ java_package_configuration(
         "-Xep:NestedInstanceOfConditions:ERROR",
         "-Xep:NonAtomicVolatileUpdate:ERROR",
         "-Xep:NonCanonicalStaticImport:ERROR",
-        # "-Xep:NonCanonicalType:WARN",
+        "-Xep:NonCanonicalType:ERROR",
         "-Xep:NonFinalCompileTimeConstant:ERROR",
         "-Xep:NonOverridingEquals:ERROR",
         "-Xep:NonRuntimeAnnotation:ERROR",
