Enable error level for the MutablePublicArray bug pattern in ErrorProne
There was only a single violation by the PAGESIZE_CHOICES field in
GeneralPreferencesInfo. This field is unused, hence drop it.

Bug: Issue 15072
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: Ief3e1517caa7e5083d32f0fe17fc18d2c8e57789

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -321,7 +321,7 @@ java_package_configuration(
         "-Xep:MultipleUnaryOperatorsInMethodCall:ERROR",
         "-Xep:MustBeClosedChecker:ERROR",
         "-Xep:MutableConstantField:ERROR",
-        # "-Xep:MutablePublicArray:WARN",
+        "-Xep:MutablePublicArray:ERROR",
         "-Xep:NCopiesOfChar:ERROR",
         "-Xep:NarrowingCompoundAssignment:ERROR",
         "-Xep:NestedInstanceOfConditions:ERROR",
