Enable error level for the InlineFormatString bug pattern in ErrorProne
Fix the current issues so that the build continues to work.

Bug: Issue 15065
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I4c898545520465b5b9e58bc9f6b20b449fbe7568

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -231,7 +231,7 @@ java_package_configuration(
         "-Xep:InfiniteRecursion:ERROR",
         "-Xep:InjectOnConstructorOfAbstractClass:ERROR",
         "-Xep:InheritDoc:ERROR",
-        # "-Xep:InlineFormatString:WARN",
+        "-Xep:InlineFormatString:ERROR",
         "-Xep:InlineMeInliner:ERROR",
         "-Xep:InlineMeSuggester:ERROR",
         "-Xep:InlineMeValidator:ERROR",
