--- a/project.config
+++ b/project.config
@@ -59,7 +59,7 @@
 	canOverrideInChildProjects = false
 [submit-requirement "Library-Compliance"]
 	description = Changes to specific library/metadata files require additional approval
-	applicableIf = -branch:refs/meta/config AND (file:\"^lib/\" OR file:\"^WORKSPACE$\" OR file:\"^.gitmodule$\" OR file:\"^tools/deps.bzl$\")
+	applicableIf = -branch:refs/meta/config AND (file:\"^lib/.*\" OR file:\"^WORKSPACE$\" OR file:\"^.gitmodule$\" OR file:\"^tools/deps.bzl$\")
 	submittableIf = label:Library-Compliance=MAX,user=non_uploader AND -label:Library-Compliance=MIN
 	canOverrideInChildProjects = false
 [access "refs/for/refs/meta/dashboards/*"]
