Enable error level for the MixedMutabilityReturnType bug pattern
Fix the current issues so that the build continues to work.

For methods that returned mixed mutability types so far, change the
return type to an immutable type if possible. For some methods where
callers expect that they can mutate the result that they received,
ensure that the method always returns a mutable type.

If the return type for a method is changed to an immutable type, also
change the type of variables to which the return value is assigned or
method args to which the return value is passed, if it makes sense.

Bug: Issue 15071
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I4b4782f1024b7c759066d3522139903abfed51f7

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -311,7 +311,7 @@ java_package_configuration(
         "-Xep:MisusedDayOfYear:ERROR",
         "-Xep:MisusedWeekYear:ERROR",
         "-Xep:MixedDescriptors:ERROR",
-        # "-Xep:MixedMutabilityReturnType:WARN",
+        "-Xep:MixedMutabilityReturnType:ERROR",
         "-Xep:MockitoUsage:ERROR",
         "-Xep:ModifiedButNotUsed:ERROR",
         "-Xep:ModifyCollectionInEnhancedForLoop:ERROR",
