Enable error level for the ThreadJoinLoop bug pattern in ErrorProne
Fix the current issues so that the build continues to work.

Bug: Issue 15078
Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I35da036643579394deb73b270cb5c35713943201

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -409,7 +409,7 @@ java_package_configuration(
         "-Xep:TemporalAccessorGetChronoField:ERROR",
         "-Xep:TestParametersNotInitialized:ERROR",
         "-Xep:TheoryButNoTheories:ERROR",
-        # "-Xep:ThreadJoinLoop:WARN",
+        "-Xep:ThreadJoinLoop:ERROR",
         "-Xep:ThreadLocalUsage:ERROR",
         # "-Xep:ThreadPriorityCheck:WARN",
         "-Xep:ThreeLetterTimeZoneID:ERROR",
