Demote JavaUtilDate error prone bug pattern to warning severity
Upcoming Bazel release 5.0 includes recent error prone release that
flags JavaUtilDate bug pattern. Demote the severity to warning to not
block Bazel upgrade and promote it to error severity again, when all
places were adapted.

Release-Notes: skip
Bug: Issue 15492
Change-Id: I406ecbe4c460534a9d3aa50464c568d539dc9e80

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -226,7 +226,7 @@ java_package_configuration(
         "-Xep:JavaLocalTimeGetNano:ERROR",
         "-Xep:JavaPeriodGetDays:ERROR",
         "-Xep:JavaTimeDefaultTimeZone:ERROR",
-        "-Xep:JavaUtilDate:ERROR",
+        "-Xep:JavaUtilDate:WARN",
         # "-Xep:JdkObsolete:WARN",
         "-Xep:JodaConstructors:ERROR",
         "-Xep:JodaDateTimeConstants:ERROR",
