Add API method for deleting self account
Release-Notes: Add API method for deleting self account
Bug: Google b/262346110
Change-Id: I2957b128364bae6c251fd918c05e1ea6a3983834

--- a/javatests/com/google/gerrit/server/BUILD
+++ b/javatests/com/google/gerrit/server/BUILD
@@ -29,6 +29,7 @@ junit_tests(
     visibility = ["//visibility:public"],
     runtime_deps = [
         "//java/com/google/gerrit/lucene",
+        "//lib/bouncycastle:bcpg",
         "//lib/bouncycastle:bcprov",
         "//prolog:gerrit-prolog-common",
     ],
