--- a/project.config
+++ b/project.config
@@ -111,11 +111,6 @@
 	type = all_comments
 	type = submitted_changes
 	filter = file:polygerrit-ui
-[submit-requirement "Verified"]
-	description = CI result status for build and tests is passing
-	applicableIf = -branch:refs/meta/config AND (file:\"^(?!polygerrit-ui/).*$\" OR -branch:refs/heads/master)
-	submittableIf = label:Verified=MAX AND -label:Verified=MIN
-	canOverrideInChildProjects = false
 [submit-requirement "Frontend-Verified"]
 	description = Frontend compilation, tests, and linters pass
 	applicableIf = branch:refs/heads/master AND file:\"^polygerrit-ui/.*\"
@@ -123,7 +118,7 @@
 	canOverrideInChildProjects = false
 [submit-requirement "Code-Style"]
 	description = Code has correct style and format
-	applicableIf = -branch:refs/meta/config AND (file:\"^(?!polygerrit-ui/).*$\" OR -branch:refs/heads/master)
+	applicableIf = -branch:refs/meta/config
 	submittableIf = label:Code-Style=MAX AND -label:Code-Style=MIN
 	canOverrideInChildProjects = false
 [submit-requirement "Library-Compliance"]
