Make Verified and Style SR optional on FE-only changes
On master branch, files in polygerrit-ui/ are full covered by
Frontend-Verified label & SR for compilation, tests, and linting.
Therefore waiting for Jenkins to vote V and CS labels is not necessary.

This change makes V and CS still apply when the branch is not "master"
or when non-"polygerrit-ui" files are touched.

Change-Id: I0b2ed78e2b152fdeb9bc29f675dac5f1a8fa9704

--- a/project.config
+++ b/project.config
@@ -111,6 +111,11 @@
 	type = all_comments
 	type = submitted_changes
 	filter = file:polygerrit-ui
+[submit-requirement "Verified"]
+	description = CI result status for build and tests is passing
+	applicableIf = -branch:refs/meta/config AND (file:\"^~(polygerrit-ui/.*)$\" OR -branch:refs/heads/master)
+	submittableIf = label:Verified=MAX AND -label:Verified=MIN
+	canOverrideInChildProjects = false
 [submit-requirement "Frontend-Verified"]
 	description = Frontend compilation, tests, and linters pass
 	applicableIf = branch:refs/heads/master AND file:\"^polygerrit-ui/.*\"
@@ -118,7 +123,7 @@
 	canOverrideInChildProjects = false
 [submit-requirement "Code-Style"]
 	description = Code has correct style and format
-	applicableIf = -branch:refs/meta/config
+	applicableIf = -branch:refs/meta/config AND (file:\"^~(polygerrit-ui/.*)$\" OR -branch:refs/heads/master)
 	submittableIf = label:Code-Style=MAX AND -label:Code-Style=MIN
 	canOverrideInChildProjects = false
 [submit-requirement "Library-Compliance"]
