--- a/tools/BUILD
+++ b/tools/BUILD
@@ -140,11 +140,12 @@ java_package_configuration(
         "-Xep:FloatCast:ERROR",
         "-Xep:FloatingPointAssertionWithinEpsilon:ERROR",
         "-Xep:FloatingPointLiteralPrecision:ERROR",
-        "-Xep:FloggerArgumentToString:ERROR",
+        "-Xep:FloggerArgumentToString:WARN",
         "-Xep:FloggerFormatString:ERROR",
+	"-Xep:FloggerLogString:WARN",
         "-Xep:FloggerLogVarargs:ERROR",
         "-Xep:FloggerSplitLogStatement:ERROR",
-        "-Xep:FloggerStringConcatenation:ERROR",
+        "-Xep:FloggerStringConcatenation:WARN",
         "-Xep:ForOverride:ERROR",
         "-Xep:FormatString:ERROR",
         "-Xep:FormatStringAnnotation:ERROR",
@@ -336,7 +337,7 @@ java_package_configuration(
         "-Xep:RestrictedApiChecker:ERROR",
         "-Xep:RethrowReflectiveOperationExceptionAsLinkageError:ERROR",
         "-Xep:ReturnFromVoid:ERROR",
-        "-Xep:ReturnValueIgnored:ERROR",
+        "-Xep:ReturnValueIgnored:WARN",
         "-Xep:RxReturnValueIgnored:ERROR",
         # "-Xep:SameNameButDifferent:WARN",
         "-Xep:SelfAssignment:ERROR",
