Change test:single to only run the default group
We added a new file group for testing the newdiff flag yesterday.
Apparently the `--files` pattern does not apply to this additional
group, and all the tests of the new group was always be run. Let's
restrict `test:single` to the default group.

Release-Notes: skip
Change-Id: I9de8bf15568bb343418d8eb2eeba8decc91ae8b3

--- a/polygerrit-ui/package.json
+++ b/polygerrit-ui/package.json
@@ -29,7 +29,7 @@
     "test:browsers": "web-test-runner --playwright --browsers webkit firefox chromium",
     "test:coverage": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
-    "test:single": "web-test-runner --watch --files",
+    "test:single": "web-test-runner --watch --group default --files",
     "test:single:coverage": "web-test-runner --watch --coverage --files"
   },
   "license": "Apache-2.0",
