Disable warnings for unsupported @SuppressWarnings annotations in Eclipse
We use a lot of @SuppressWarnings annotations for suppressing ErrorProne
issues that are not known to Eclipse. At the moment these show up as
warnings, e.g. 'Unsupported @SuppressWarnings("BanSerializableRead")'.
Since having these annotations is intended we don't need a warning for
them. Having these warnings adds a lot of noise so that other warnings,
for things we would like to address, stay unnoticed. Hence disable these
warnings.

Release-Notes: skip
Change-Id: I64938ba207b59292bcec9e18ab5612e92d007ebd
Signed-off-by: Edwin Kempin <ekempin@google.com>

--- a/.settings/org.eclipse.jdt.core.prefs
+++ b/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+org.eclipse.jdt.core.builder.annotationPath.allLocations=disabled
 org.eclipse.jdt.core.compiler.annotation.inheritNullAnnotations=disabled
 org.eclipse.jdt.core.compiler.annotation.missingNonNullByDefaultAnnotation=ignore
 org.eclipse.jdt.core.compiler.annotation.nonnull=org.eclipse.jdt.annotation.NonNull
@@ -102,7 +103,7 @@ org.eclipse.jdt.core.compiler.problem.unavoidableGenericTypeProblems=enabled
 org.eclipse.jdt.core.compiler.problem.uncheckedTypeOperation=warning
 org.eclipse.jdt.core.compiler.problem.unclosedCloseable=warning
 org.eclipse.jdt.core.compiler.problem.undocumentedEmptyBlock=ignore
-org.eclipse.jdt.core.compiler.problem.unhandledWarningToken=warning
+org.eclipse.jdt.core.compiler.problem.unhandledWarningToken=ignore
 org.eclipse.jdt.core.compiler.problem.unlikelyCollectionMethodArgumentType=warning
 org.eclipse.jdt.core.compiler.problem.unlikelyCollectionMethodArgumentTypeStrict=disabled
 org.eclipse.jdt.core.compiler.problem.unlikelyEqualsArgumentType=warning
