Edit Repo Config
Change-Id: I8ec20df1a9b9c383801ba2e70f0eb0b633ccfd73

--- a/project.config
+++ b/project.config
@@ -37,12 +37,12 @@
 [reviewer]
 	enableByEmail = true
 [plugin "weblinks-default"]
-	branch = '${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:;bpv=1'
-	file = '${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:${path}'
-	history = '${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:${path};bpv=1'
-	patchset = '${cs-opensource}gerrit/gerrit/${repo}/+/${commit}'
-	repo = '${cs-opensource}gerrit/gerrit/${repo};bpv=1'
-	tag = '${cs-opensource}gerrit/gerrit/${repo}/+/refs/tags/${tag}:;bpv=1'
+	branch = ${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:;bpv=1
+	file = ${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:${path}
+	history = ${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:${path};bpv=1
+	patchset = ${cs-opensource}gerrit/gerrit/${repo}/+/${commit}
+	repo = ${cs-opensource}gerrit/gerrit/${repo};bpv=1
+	tag = ${cs-opensource}gerrit/gerrit/${repo}/+/refs/tags/${tag}:;bpv=1
 [label "Verified"]
 	function = NoBlock
 	value = -1 Fails
