Change weblinks in project.config to googler-only
Too many of the opensource cs links are broken. So for public users we
have no choice but to point to Gitiles for the time being.

The googler-only config will also be applied to other repos or the
entire host. Doing this for the gerrit repo only is just for
validation.

Change-Id: Iccbf3200ced36343e802df62d1d3b226a2e95986

--- a/project.config
+++ b/project.config
@@ -36,13 +36,13 @@
 	rejectImplicitMerges = true
 [reviewer]
 	enableByEmail = true
-[plugin "weblinks-default"]
-	branch = ${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:;bpv=1
-	file = ${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:${path}
-	history = ${cs-opensource}gerrit/gerrit/${repo}/+/${branch}:${path};bpv=1
-	patchset = ${cs-opensource}gerrit/gerrit/${repo}/+/${commit}
-	repo = ${cs-opensource}gerrit/gerrit/${repo};bpv=1
-	tag = ${cs-opensource}gerrit/gerrit/${repo}/+/refs/tags/${tag}:;bpv=1
+[plugin "weblinks-googler"]
+	branch = ${cs-google}h/${host}/${repo}/+/${branch}:
+	file = ${cs-google}h/${host}/${repo}/+/${branch}:${path}
+	history = ${cs-google}h/${host}/${repo}/+/${branch}:${path};bpv=1;bpt=0
+	patchset = ${cs-google}h/${host}/${repo}/+/${commit}
+	repo = ${cs-google}h/${host}/${repo}
+	tag = ${cs-google}h/${host}/${repo}/+/refs/tags/${tag}:
 [label "Verified"]
 	function = NoBlock
 	value = -1 Fails
