--- a/project.config
+++ b/project.config
@@ -42,7 +42,7 @@
 	history = ${cs-google}h/${host}/${repo}/+/${branch}:${path};bpv=1;bpt=0
 	patchset = ${cs-google}h/${host}/${repo}/+/${commit}
 	repo = ${cs-google}h/${host}/${repo}
-	tag = ${cs-google}h/${host}/${repo}/+/refs/tags/${tag}:
+	tag = ${cs-google}h/${host}/${repo}/+/${tag}:
 [label "Verified"]
 	function = NoBlock
 	value = -1 Fails
