Edit Repo Config
Change-Id: I376f5d658f82f06e28b7a9ffcd2f61a1911f9503

--- a/project.config
+++ b/project.config
@@ -39,7 +39,7 @@
 [plugin "weblinks-googler"]
 	branch = ${cs-google}h/${host}/${repo}/+/${branch}:
 	file = ${cs-google}h/${host}/${repo}/+/${branch}:${path}
-	history = ${cs-google}h/${host}/${repo}/+/${branch}:${path};bpv=1;bpt=0
+	history = "${cs-google}h/${host}/${repo}/+/${branch}:${path};bpv=1;bpt=0"
 	patchset = ${cs-google}h/${host}/${repo}/+/${commit}
 	repo = ${cs-google}h/${host}/${repo}
 	tag = ${cs-google}h/${host}/${repo}/+/${tag}:
