--- a/plugins/package.json
+++ b/plugins/package.json
@@ -9,14 +9,14 @@
     "@open-wc/testing": "^3.1.6",
     "@web/dev-server-esbuild": "^0.3.2",
     "@web/test-runner": "^0.14.0",
-    "@codemirror/autocomplete": "^6.5.1",
-    "@codemirror/commands": "^6.2.3",
+    "@codemirror/autocomplete": "^6.7.1",
+    "@codemirror/commands": "^6.2.4",
     "@codemirror/legacy-modes": "^6.3.2",
     "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/lang-css": "^6.2.0",
     "@codemirror/lang-html": "^6.4.3",
     "@codemirror/lang-java": "^6.0.1",
-    "@codemirror/lang-javascript": "^6.1.7",
+    "@codemirror/lang-javascript": "^6.1.8",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lang-less": "^6.0.0",
     "@codemirror/lang-markdown": "^6.1.1",
@@ -24,17 +24,24 @@
     "@codemirror/lang-python": "^6.1.2",
     "@codemirror/lang-rust": "^6.0.1",
     "@codemirror/lang-sass": "^6.0.1",
-    "@codemirror/lang-sql": "^6.4.1",
+    "@codemirror/lang-sql": "^6.5.0",
     "@codemirror/lang-xml": "^6.0.2",
-    "@codemirror/language": "^6.6.0",
-    "@codemirror/language-data": "^6.3.0",
+    "@codemirror/language": "^6.7.0",
+    "@codemirror/language-data": "^6.3.1",
     "@codemirror/lint": "^6.2.1",
     "@codemirror/search": "^6.4.0",
     "@codemirror/state": "^6.2.0",
-    "@codemirror/view": "^6.10.0",
+    "@codemirror/view": "^6.12.0",
     "lit": "^2.2.3",
     "rxjs": "^6.6.7",
     "sinon": "^13.0.0"
+  },
+  "resolutions": {
+    "@codemirror/autocomplete": "^6.7.1",
+    "@codemirror/language": "^6.7.0",
+    "@codemirror/lang-javascript": "^6.1.8",
+    "@codemirror/lang-sql": "^6.5.0",
+    "@codemirror/view": "^6.12.0"
   },
   "license": "Apache-2.0",
   "private": true
