Verbose version output, provide noteDb and index versions
Extend the "version" program, the "version" SSH command and the
/config/server/version REST API to optionally provide verbose output
which, in addition to the Gerrit version, provides the NoteDb version
and the version of each index.

Example for the SSH command:
$ ssh <gerrit> version
gerrit version 3.8.0-335-g711a875804-dirty

$ ssh <gerrit> version --verbose
NoteDb version 185
index versions
   83 changes
   13 accounts
    6 projects
   10 groups

Change-Id: Ic6021df637df57d6e903c3520df77f67ec6aac70

--- a/java/com/google/gerrit/server/BUILD
+++ b/java/com/google/gerrit/server/BUILD
@@ -155,6 +155,7 @@ java_library(
         "//java/com/google/gerrit/server/logging",
         "//java/com/google/gerrit/server/restapi",
         "//java/com/google/gerrit/server/rules/prolog",
+        "//java/com/google/gerrit/server/version",
         "//lib:blame-cache",
         "//lib:guava",
         "//lib:jgit",
