Bazel: Expose prolog rules to plugin API
Since change Iedefe1f0f82 prolog rules were extracted to its own
package. Expose the new rule also in plugin API, so that the plugins
can depend on it.

Release-Notes: skip
Change-Id: Ibd3fa93cf355de44c9d7dbb14644ec773158f52b

--- a/plugins/BUILD
+++ b/plugins/BUILD
@@ -62,6 +62,7 @@ EXPORTS = [
     "//java/com/google/gerrit/server/data",
     "//java/com/google/gerrit/server/git/receive",
     "//java/com/google/gerrit/server/logging",
+    "//java/com/google/gerrit/server/rules/prolog",
     "//java/com/google/gerrit/server/schema",
     "//java/com/google/gerrit/server/util/time",
     "//java/com/google/gerrit/proto",
