Move ExternalId::toByteArray to AccountField::serializeExternalId.
This method should not be used outside the indexing logic.

This is a part of a series of changes intended to add support for
different account storage systems.

Bug: Google b/274585632
Change-Id: I3c13367d96e4a2c5204351cfa7a3b700d5ec3c21

--- a/javatests/com/google/gerrit/server/query/account/BUILD
+++ b/javatests/com/google/gerrit/server/query/account/BUILD
@@ -16,6 +16,7 @@ java_library(
         "//java/com/google/gerrit/common:annotations",
         "//java/com/google/gerrit/entities",
         "//java/com/google/gerrit/extensions:api",
+        "//java/com/google/gerrit/git",
         "//java/com/google/gerrit/index",
         "//java/com/google/gerrit/lifecycle",
         "//java/com/google/gerrit/server",
