Catch JGit cache_used_per_repository metric IllegalArgumentException
JGit registers a metric trigger which is in charge of setting metrics
for the top repositories having most data in the cache.

When the trigger runs however, an IllegalArgumentException might be
thrown due to an attempt to register the same metric name twice for
repositories whose name normalizes to the same string value.

Catch any IllegalArgumentException thrown when executing the JGit block
cache trigger so that other metrics can still be exposed.

Bug: Issue 16843
Change-Id: Ic56339cf0683d4dc234032a526f302213e2c12a9

--- a/javatests/com/google/gerrit/metrics/proc/BUILD
+++ b/javatests/com/google/gerrit/metrics/proc/BUILD
@@ -6,11 +6,13 @@ junit_tests(
     srcs = glob(["**/*.java"]),
     deps = [
         "//java/com/google/gerrit/common:server",
+        "//java/com/google/gerrit/extensions:api",
         "//java/com/google/gerrit/lifecycle",
         "//java/com/google/gerrit/metrics",
         "//java/com/google/gerrit/metrics/dropwizard",
         "//lib/dropwizard:dropwizard-core",
         "//lib/guice",
+        "//lib/jgit/org.eclipse.jgit:jgit",
         "//lib/truth",
     ],
 )
